# termviz2

./: .gitignore  Cargo.toml  README.md  package.xml
config/: termviz2.yml
src/: app.rs  config.rs  main.rs  ros.rs  terminal.rs  utils.rs
src/inputs/: footprint.rs  image.rs  laser.rs  listeners.rs  map.rs  marker.rs  mod.rs  odom.rs  path.rs  plot.rs  pointcloud.rs  polygon.rs  pose.rs
src/modes/: image_view.rs  mod.rs  plot_view.rs  send_pose.rs  teleoperate.rs  topic_management.rs  viewport.rs
src/outputs/: publishers.rs
test/: pub_marker.py  pub_marker_array.py  pub_pointcloud2.py
