<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>termviz2</name>
  <version>0.1.0</version>
  <description>ROS 2 Visualizer for terminal</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>service_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>